{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 529,
  "lineage": "c01cb8e5-9858-ec6a-05c0-ea0ccf436430",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "chatapp_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ad21ae1d0696ad58",
            "arn": "arn:aws:ec2:ap-south-1:058264108290:instance/i-030c377a0667790f9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030c377a0667790f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "generated-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d7bc95ace6c4427e",
            "private_dns": "ip-10-0-1-219.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.219",
            "public_ip": "52.66.206.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02ffe07424bfd3f0b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0d0deba3565848abe"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a30bb7b0e58fa780",
            "tags": {
              "Name": "Server-Web"
            },
            "tags_all": {
              "Name": "Server-Web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d0deba3565848abe"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key_pair",
            "aws_security_group.allow_ports",
            "aws_subnet.subnet-chatapp-1",
            "aws_vpc.vpc-chat",
            "local_file.TF_key",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-chat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264108290:internet-gateway/igw-01dffb3871ac2b352",
            "id": "igw-01dffb3871ac2b352",
            "owner_id": "058264108290",
            "tags": {
              "Name": "intgateway-chatapp"
            },
            "tags_all": {
              "Name": "intgateway-chatapp"
            },
            "vpc_id": "vpc-0b8f94540e49524f0"
          },
          "dependencies": [
            "aws_vpc.vpc-chat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "mainrt-chatapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036e2ccb245f21bf1",
            "original_route_table_id": "rtb-03de82bc6018b9ada",
            "route_table_id": "rtb-08224f7b90b85e010",
            "vpc_id": "vpc-0b8f94540e49524f0"
          },
          "dependencies": [
            "aws_internet_gateway.igw-chat",
            "aws_route_table.route-chatapp",
            "aws_vpc.vpc-chat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-chatapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264108290:route-table/rtb-08224f7b90b85e010",
            "id": "rtb-08224f7b90b85e010",
            "owner_id": "058264108290",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01dffb3871ac2b352",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table_chatapp"
            },
            "tags_all": {
              "Name": "route_table_chatapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8f94540e49524f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-chat",
            "aws_vpc.vpc-chat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264108290:security-group/sg-0d0deba3565848abe",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0deba3565848abe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Docker Compose Port",
                "from_port": 12345,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 12345
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP FROM VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS FROM VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH FROM VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240809045538119300000001",
            "name_prefix": "terraform-",
            "owner_id": "058264108290",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow web"
            },
            "tags_all": {
              "Name": "allow web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8f94540e49524f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-chat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-chatapp-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264108290:subnet/subnet-0a30bb7b0e58fa780",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a30bb7b0e58fa780",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264108290",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-chatapp"
            },
            "tags_all": {
              "Name": "subnet-chatapp"
            },
            "vpc_id": "vpc-0b8f94540e49524f0"
          },
          "dependencies": [
            "aws_vpc.vpc-chat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-chat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264108290:vpc/vpc-0b8f94540e49524f0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0977fbc17b6d02548",
            "default_route_table_id": "rtb-03de82bc6018b9ada",
            "default_security_group_id": "sg-0717f8f855255bc3c",
            "dhcp_options_id": "dopt-07960e4961cb3989c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b8f94540e49524f0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03de82bc6018b9ada",
            "owner_id": "058264108290"
          }
        }
      ]
    }
  ]
}